--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
 body {
   background-color: black;
-  background-image: url(../../images/animated_background1.gif)
+  background-image: url('../../images/animated_background1.gif')
 }
