--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -115,7 +115,7 @@ input, select, textarea {
 /* Type */
 
 	body, input, select, textarea {
-		color: rgba(255, 255, 255, 0.55);
+		color: white;
 		font-family: Arial, Helvetica, sans-serif;
 		font-size: 16.5pt;
 		font-weight: normal;
@@ -3873,7 +3873,7 @@ input, select, textarea {
 /* Intro */
 
 	#intro {
-		background-image: url("images/gif1.gif");
+		background-image: url("images/starfall-gif-29.gif");
 		background-position: top right;
 		background-repeat: no-repeat;
 		background-size: 100% 100%;
