--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,6 +54,10 @@ body {
 	-webkit-text-size-adjust: none;
 }
 
+hr {
+	border-top: 1px blue;
+}
+
 mark {
 	background-color: transparent;
 	color: inherit;
@@ -1988,7 +1992,7 @@ input, select, textarea {
 		-ms-flex-wrap: wrap;
 		flex-wrap: wrap;
 		border-radius: 0.25em;
-		border: solid 1px rgba(255, 255, 255, 0.15);
+		border: solid 1px blue;
 		background: rgba(255, 255, 255, 0.05);
 		margin: 0 0 2em 0;
 	}
@@ -1996,7 +2000,7 @@ input, select, textarea {
 		.features section {
 			padding: 3.5em 3em 1em 7em ;
 			width: 50%;
-			border-top: solid 1px rgba(255, 255, 255, 0.15);
+			border-top: solid 1px blue;
 			position: relative;
 		}
 
@@ -2005,7 +2009,7 @@ input, select, textarea {
 			}
 
 			.features section:nth-child(2n) {
-				border-left: solid 1px rgba(255, 255, 255, 0.15);
+				border-left: solid 1px blue;
 			}
 
 			.features section .icon {
