--- a/media.css
+++ b/media.css
@@ -87,8 +87,10 @@
     text-align: center;
   }
   .section__pic-container {
-    width: 100%; /* Make it full width */
+    width: auto; 
     height: auto; /* Set height to auto for flexibility */
+    max-height: 100%;
+    max-width: 100%;
     justify-content: center;
   }
   .section__text__p2 {
