--- a/media.css
+++ b/media.css
@@ -87,11 +87,9 @@
     text-align: center;
   }
   .section__pic-container {
-    width: auto; 
-    height: auto; /* Set height to auto for flexibility */
-    max-height: 100%;
-    max-width: 100%;
-    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+    margin: 0 auto 2rem;
   }
   .section__text__p2 {
     font-size: 1.25rem;
