--- a/style.css
+++ b/style.css
@@ -172,8 +172,8 @@ section {
 
 .section__pic-container {
   display: flex;
-  height: 400vh;
-  width: 400vw;
+  height: 400px;
+  width: 400px;
   margin: auto 0;
 }
 
@@ -310,8 +310,8 @@ section {
 }
 
 .section__pic-container {
-  height: 400vh;
-  width: 400vw;
+  height: 400px;
+  width: 400px;
   margin: auto 0;
 }
 
