--- a/media.css
+++ b/media.css
@@ -53,7 +53,7 @@
       height: 40vh;
     }
     #profile {
-      height: 83vh;
+      height: 40vh;
       margin-bottom: 0;
     }
     article {
@@ -87,8 +87,8 @@
       text-align: center;
     }
     .section__pic-container {
-      width: auto;
-      height: 46vw;
+      width: 46vw;
+      height: 46vh;
       justify-content: center;
     }
     .section__text__p2 {
