--- a/media.css
+++ b/media.css
@@ -1,17 +1,21 @@
-@media screen and (max-width: 1400px) {
-    #profile {
-      height: 83vh;
-      margin-bottom: 6rem;
-    }
-    .about-containers {
-      flex-wrap: wrap;
-    }
-    #contact,
-    #experience
-    #projects {
-      height: fit-content;
-    }
+@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) {
+  #profile {
+    height: 83vh;
+    margin-bottom: 6rem;
   }
+  
+  .about-containers {
+    flex-wrap: wrap;
+  }
+  
+  #contact,
+  #experience,
+  #projects {
+    height: fit-content;
+    margin-top: 4rem; /* Adjust the margin between sections */
+  }
+}
+
   
   @media screen and (max-width: 1200px) {
     #desktop-nav {
