--- a/media.css
+++ b/media.css
@@ -1,23 +1,56 @@
 @media screen and (min-device-width: 1200px) and (max-device-width: 1600px) {
-  #profile {
-    height: 83vh;
-    margin-bottom: 6rem;
-  }
-  
-  .about-containers {
-    flex-wrap: wrap;
-  }
-  
   #contact,
-  #experience,
-  #projects {
-    height: auto; /* Set height to auto to accommodate content */
-    margin-top: 4rem; /* Adjust the margin between sections */
-    padding-top: 2rem; /* Add padding to create space within each section */
-    padding-bottom: 2rem; /* Add padding to create space within each section */
-    margin-bottom: 4rem; /* Add margin at the bottom of each section */
-  }
-}
+    footer {
+      height: 83vh;
+    }
+    #profile {
+      height: 83vh;
+      margin-bottom: 6rem;
+    }
+    article {
+      font-size: 1rem;
+    }
+    footer nav {
+      height: fit-content;
+      margin-bottom: 2rem;
+    }
+    .about-containers,
+    .contact-info-upper-container,
+    .btn-container {
+      flex-wrap: wrap;
+    }
+    .contact-info-container {
+      margin: 0;
+    }
+    .contact-info-container p,
+    .nav-links li a {
+      font-size: 1rem;
+    }
+    .experience-sub-title {
+      font-size: 1.25rem;
+    }
+    .logo {
+      font-size: 1.5rem;
+    }
+    .nav-links {
+      flex-direction: column;
+      gap: 0.5rem;
+      text-align: center;
+    }
+    .section__pic-container {
+      width: 46vw;
+      height: 46vh;
+      justify-content: center;
+    }
+    .section__text__p2 {
+      font-size: 1.25rem;
+    }
+    .title {
+      font-size: 2rem;
+    }
+    .text-container {
+      text-align: justify;
+    }
 
   
   @media screen and (max-width: 1200px) {
