--- a/media.css
+++ b/media.css
@@ -1,57 +1,16 @@
-@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) {
-  #contact,
-    footer {
-      height: 83vh;
-    }
+@media screen and (max-width: 1400px) {
     #profile {
       height: 83vh;
       margin-bottom: 6rem;
     }
-    article {
-      font-size: 1rem;
-    }
-    footer nav {
-      height: fit-content;
-      margin-bottom: 2rem;
-    }
-    .about-containers,
-    .contact-info-upper-container,
-    .btn-container {
+    .about-containers {
       flex-wrap: wrap;
     }
-    .contact-info-container {
-      margin: 0;
+    #contact,
+    #projects {
+      height: fit-content;
     }
-    .contact-info-container p,
-    .nav-links li a {
-      font-size: 1rem;
-    }
-    .experience-sub-title {
-      font-size: 1.25rem;
-    }
-    .logo {
-      font-size: 1.5rem;
-    }
-    .nav-links {
-      flex-direction: column;
-      gap: 0.5rem;
-      text-align: center;
-    }
-    .section__pic-container {
-      width: 46vw;
-      height: 46vh;
-      justify-content: center;
-    }
-    .section__text__p2 {
-      font-size: 1.25rem;
-    }
-    .title {
-      font-size: 2rem;
-    }
-    .text-container {
-      text-align: justify;
-    }
-
+  }
   
   @media screen and (max-width: 1200px) {
     #desktop-nav {
@@ -68,13 +27,6 @@
     .section-container {
       display: block;
     }
-    #experience {
-    margin-bottom: 4rem; /* Increase margin to create space */
-    }
-
-   #projects {
-    margin-top: 4rem; /* Increase margin to create space */
-  }
     .arrow {
       display: none;
     }
